--- a/baking_recipes/Gemfile
+++ b/baking_recipes/Gemfile
@@ -30,6 +30,9 @@ gem 'devise'
 gem 'pry-rails'
 gem 'thin'
 
+gem 'bootstrap-sass', '~> 3.3.5'
+
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
