--- a/baking_recipes/Gemfile
+++ b/baking_recipes/Gemfile
@@ -23,6 +23,8 @@ gem 'jbuilder', '~> 2.0'
 
 gem 'ransack'
 
+gem 'carrierwave'
+
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
